backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todowebapp-api
  namespace: todoapp
  labels:
    app: todowebapp-api
spec:
  ports:
    - port: 3000
      targetPort: api-server
  selector:
    app: todowebapp-api
---
