frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todowebapp
  namespace: todoapp
  labels:
    app: todowebapp
spec:
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: todowebapp
---
