ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: rizaltodo.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todowebapp
                port:
                  number: 80

    - host: api.rizaltodo.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todowebapp-api
                port:
                  number: 3000
